--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,30 @@
 <resources>
     <string name="app_name">Zikub</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_login">Se connecter</string>
 
     <!-- Strings related to login -->
+    <string name="prompt_name">Nom</string>
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
-    <string name="title_activity_register">Sign in</string>
-    <string name="title_activity_settings">Settings</string>
+    <string name="prompt_password">Mot de passe</string>
+    <string name="prompt_password_confirm">Confirmation du mot de passe</string>
+    <string name="action_sign_in">Se connecter</string>
+    <string name="action_sign_in_short">Se connecter</string>
+    <string name="action_register">S\'inscrirer</string>
+    <string name="error_no_username">Veuillez entrer un nom d\'utilisateur</string>
+    <string name="error_invalid_email">Cette adresse est invalide</string>
+    <string name="error_invalid_password">Mot de passe trop court</string>
+    <string name="error_no_password">Veuillez entrer un mot de passe</string>
+    <string name="error_incorrect_password">Mot de passe incorrect</string>
+    <string name="error_invalid_password_confirmation">Le mot de passe et sa confirmation ne correspondent pas</string>
+    <string name="error_field_required">Champs requis</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="title_activity_register">S\'inscrire</string>
+    <string name="title_activity_settings">Paramètres</string>
 
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_header_general">Général</string>
 
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact
