--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Zikub</string>
     <string name="title_activity_login">Se connecter</string>
 
-    <!-- Strings related to login -->
+    <!-- Login & Register -->
     <string name="prompt_name">Nom</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Mot de passe</string>
@@ -21,7 +21,17 @@
     <string name="title_activity_register">S\'inscrire</string>
     <string name="title_activity_settings">Paramètres</string>
 
-    <!-- Strings related to Settings -->
+    <!-- Home -->
+    <string name="zikub">Zikub</string>
+    <string name="devise">Partagez vos musiques avec vos amis</string>
+    <string name="conditions">Conditions d\'utilisation</string>
+    <string name="btnConnexion">Connexion</string>
+    <string name="btnInscription">Inscription</string>
+    <string name="btnConnexionFB">Se connecter avec Facebook</string>
+    <string name="btnConnexionT">Se connecter avec Twitter</string>
+    <string name="btnConnexionG">Se connecter avec Google +</string>
+
+    <!-- Settings -->
 
     <!-- Example General settings -->
     <string name="pref_header_general">Général</string>
@@ -92,14 +102,4 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-
-    <!-- home -->
-    <string name="zikub">Zikub</string>
-    <string name="devise">Partagez vos musiques avec vos amis</string>
-    <string name="conditions">Conditions d\'utilisation</string>
-    <string name="btnConnexion">Connexion</string>
-    <string name="btnInscription">Inscription</string>
-    <string name="btnConnexionFB">Se connecter avec Facebook</string>
-    <string name="btnConnexionT">Se connecter avec Twitter</string>
-    <string name="btnConnexionG">Se connecter avec Google +</string>
 </resources>
